--- a/src/Weather.css
+++ b/src/Weather.css
@@ -16,7 +16,11 @@ body {
     margin-left: 20px;
     font-size: 20px;
   }
-  
+  .Weather canvas {
+    height: 100px;
+    width: 100px;
+    margin-left: 15px;
+}
   .Weather .dataset h1 {
     font-weight: 600;
     font-size: 60px;
