--- a/src/Weather.css
+++ b/src/Weather.css
@@ -17,9 +17,7 @@ body {
     font-size: 20px;
   }
   .Weather canvas {
-    height: 100px;
-    width: 100px;
-    margin-left: 15px;
+   
 }
   .Weather .dataset h1 {
     font-weight: 600;
@@ -54,4 +52,9 @@ body {
   .Weather ul li {
     list-style: none;
   }
-  
+  .WeatherInfo .weather-temperature {
+    margin-left: 15px;
+  }
+.WeatherInfo .float-left {
+    margin-left: 20px;
+}
